--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
     </ul>
 
     <h2 class="text-md my-4 text-tml-blue font-bold">More</h2>
-    <p>For further advice on how to use 3ml, please go to our <a href="http://www.realscience.org.uk/3ml/guidance.html">Guidance
+    <p>For further advice on how to use 3ml, please go to our <a href="http://www.realscience.org.uk/3ml/guidance.html" target="_blank" rel="noopener noreferrer">Guidance
             page</a>.</p>
 </div>
 </div>
