--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <!-- Sign up Banner -->
     <div class="w-full mb-4">
-        <a href="https://3ml.org.uk/#/register" target="_blank" rel="noopener noreferrer">
+        <a target="_blank" rel="noopener noreferrer" href="https://3ml.org.uk/#/register" target="_blank" rel="noopener noreferrer">
             <div class="shadow-lg text-white tracking-widest text-center h-24 rounded bg-auto p-6 hover:bg-tml-blue"
                 style="background-image: url('https://images.nasa.gov/images/landing_bg.jpg')">
                 <h1 class="shadow">
@@ -69,27 +69,28 @@
     </div>
     <!-- Sample Stories-->
     <div id="storytiles" class="flex flex-wrap w-full -mx-1">
-        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/1142" class="block shadow w-full h-full p-1"
+        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a target="_blank" rel="noopener noreferrer" href="https://3ml.org.uk/#/stories/1142" class="block shadow w-full h-full p-1"
                 style="background-image: url(&quot;https://3ml.org.uk/thumbs/senseofcertainty.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                 title="Where I belong">
                 <h3 class="text-sm font-bold text-white ">Where I belong</h3>
             </a></div>
-        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/902" class="block shadow w-full h-full p-1"
-                style="background-image: url(&quot;https://3ml.org.uk/thumbs/585ab148dc6df.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                title="Young dreams">
-                <h3 class="text-sm font-bold text-white ">Young dreams</h3>
+        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a target="_blank" rel="noopener noreferrer" href="https://3ml.org.uk/#/stories/864" class="block shadow w-full h-full p-1"
+                style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cc899bda43d.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
+                title="Hardy Martians">
+                <h3 class="text-sm font-bold text-white ">Hardy Martians</h3>
             </a></div>
-        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/901" class="block shadow w-full h-full p-1"
-                style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d71de9331.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                title="Atom bomb vs volcano">
-                <h3 class="text-sm font-bold text-white ">Atom bomb vs volcano</h3>
-            </a></div>
-        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/897" class="block shadow w-full h-full p-1"
+            <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a target="_blank" rel="noopener noreferrer" href="https://3ml.org.uk/#/stories/897" class="block shadow w-full h-full p-1"
                 style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d12062485.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                 title="Dog TV">
                 <h3 class="text-sm font-bold text-white ">Dog TV</h3>
             </a>
         </div>
+        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a target="_blank" rel="noopener noreferrer" href="https://3ml.org.uk/#/stories/876" class="block shadow w-full h-full p-1"
+                style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cf2264371b8.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
+                title="Under the sea">
+                <h3 class="text-sm font-bold text-white ">Under the sea</h3>
+            </a></div>
+       
     </div>
 </div>
 </div>
