--- a/resources.html
+++ b/resources.html
@@ -38,7 +38,7 @@
         <h3 class="shadow-md w-full text-white tracking-widest text-left h-15 bg-tml-blue p-2 mb-6">
             Review questions - curriculum topics
         </h3>
-        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsForces.pdf" target="_blank" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue pb-10">
+        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsForces.pdf" target="_blank" rel="noopener noreferrer" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue pb-10">
             <div class="w-full lg:flex pb-10">
                 <div class="h-24 lg:h-auto lg:w-48 flex-none bg-auto bg-center bg-no-repeat rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/liftthumb.jpg')" title="Airplane">
@@ -54,7 +54,7 @@
     <div class="bg-white shadow-md rounded my-6">
         <h3 class="shadow-md w-full text-white tracking-widest text-left h-15 bg-tml-blue p-2">
             Review questions - researchers </h3>
-        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJaneGoodall.pdf" target="_blank" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
+        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJaneGoodall.pdf" target="_blank" rel="noopener noreferrer" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
             <div class="w-full lg:flex my-10">
                 <div class="h-40 lg:h-32 lg:w-48 flex -none bg-auto bg-center bg-no-repeat rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/janethumb2.jpg')" title="Jane Goodall">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </a>
-        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsDawnGeatches.pdf" target="_blank" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
+        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsDawnGeatches.pdf" target="_blank" rel="noopener noreferrer" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
             <div class="w-full lg:flex my-10">
                 <div class="h-40 lg:h-32 lg:w-48 flex -none bg-auto bg-center bg-no-repeat rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/dawnthumb.jpg')" title="Dawn Geatches">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </a>
-        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsValeriaLosasso.pdf" target="_blank" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
+        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsValeriaLosasso.pdf" target="_blank" rel="noopener noreferrer" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
             <div class="w-full lg:flex my-10">
                 <div class="h-40 lg:h-32 lg:w-48 flex -none bg-auto bg-center bg-no-repeat rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/valeriathumb.jpg')" title="Valeria Losasso">
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </a>
-        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesWilson.pdf" target="_blank" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
+        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesWilson.pdf" target="_blank" rel="noopener noreferrer" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
             <div class="w-full lg:flex my-10">
                 <div class="h-40 lg:h-32 lg:w-48 flex -none bg-auto bg-center bg-no-repeat rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/jameswilsonthumb.jpg')" title="Valeria Losasso">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </a>
-        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesGebbie.pdf" target="_blank" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
+        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesGebbie.pdf" target="_blank" rel="noopener noreferrer" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
             <div class="w-full lg:flex my-10">
                 <div class="h-40 lg:h-32 lg:w-48 flex -none bg-auto bg-center bg-no-repeat rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/jamesgebbiethumb.jpg')" title="Valeria Losasso">
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </a>
-        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsChrisPearson.pdf" target="_blank" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
+        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsChrisPearson.pdf" target="_blank" rel="noopener noreferrer" class="w-full text-center text-grey-lighter rounded text-md bg-green hover:text-tml-blue">
             <div class="w-full lg:flex my-10">
                 <div class="h-40 lg:h-32 lg:w-48 flex -none bg-auto bg-center bg-no-repeat rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/chrispearsonthumb.jpg')" title="Valeria Losasso">
