--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     Sign up and try it out!
                 </h1>
                 <p class="shadow">
-                    It is free to all SSERC member schools.
+                    3ml is free to all SSERC member schools.
                 </p>
             </div>
         </a>
