--- a/guidance.html
+++ b/guidance.html
@@ -36,7 +36,7 @@
     </h1>
     <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to search for stories</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/2findastory.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/2findastory.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -45,7 +45,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to do connect and question</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/3connectandquestion.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/3connectandquestion.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -54,7 +54,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to do summarise and clarify</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/4summariseandclarfiy.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/4summariseandclarfiy.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -63,7 +63,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to register your school for 3ml</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/6registeringaschool.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/6registeringaschool.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -72,7 +72,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to calculate the readability of a piece of writing</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/5findingtheflesch.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/5findingtheflesch.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -81,7 +81,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to make accounts for your pupils</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/7makingpupilsaccounts.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/7makingpupilsaccounts.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -90,7 +90,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to collect pupils into a class</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/8makingaclass.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/8makingaclass.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -99,7 +99,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to make an anthology of stories for pupils</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/9makingananthology.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/9makingananthology.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -108,7 +108,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to make accounts for other teachers</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/10extrateacheraccounts.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/10extrateacheraccounts.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -117,7 +117,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How to set or change a pupil password</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/11NewPupilPassword.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/11NewPupilPassword.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -126,7 +126,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">Motivation: Why 3ml?</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/0Why3ml.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/0Why3ml.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
@@ -135,7 +135,7 @@
 
 <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
   <h3 class="text-sm font-bold mb-1 text-black text-center mb-1">How hard it is to find readable science stories?</h3>
-  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/1findingsciencestories.mp4">
+  <a class="block self-center h-auto p-1" href="http://www.realscience.org.uk/3ml/vids/1findingsciencestories.mp4" target="_blank" rel="noopener noreferrer">
     <svg height="50pt" viewBox="0 0 480 480" width="50pt" xmlns="http://www.w3.org/2000/svg">
       <path d="m240 0c-132.546875 0-240 107.453125-240 240s107.453125 240 240 240 240-107.453125 240-240c-.148438-132.484375-107.515625-239.851562-240-240zm0 464c-123.710938 0-224-100.289062-224-224s100.289062-224 224-224 224 100.289062 224 224c-.140625 123.652344-100.347656 223.859375-224 224zm0 0" />
       <path d="m355.574219 232.839844-192-96c-2.480469-1.238282-5.425781-1.105469-7.78125.351562-2.359375 1.460938-3.792969 4.035156-3.792969 6.808594v192c-.015625 2.78125 1.414062 5.367188 3.773438 6.835938 2.363281 1.46875 5.316406 1.605468 7.800781.363281l192-96c2.71875-1.351563 4.433593-4.125 4.433593-7.160157 0-3.03125-1.714843-5.804687-4.433593-7.160156zm-187.574219 90.214844v-166.109376l166.113281 83.054688zm0 0" /></svg>
