--- a/guidance.html
+++ b/guidance.html
@@ -23,7 +23,7 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="index.html">Home</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
-        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="researchers.html">Resources</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3mlApp</a>
       </div>
     </div>
@@ -31,7 +31,7 @@
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
 <div class="flex flex-wrap m-1 p-2">
-    <h1 class="shadow-md w-full text-white tracking-widest text-center h-10 bg-green-600 my-4 p-2">
+    <h1 class="shadow-md w-full text-white tracking-widest text-center bg-green-600 my-4 p-2">
             We have prepared a number of short videos to help you get started and make the most of 3ml.
     </h1>
     <div class="flex flex-col shadow justify-around w-full sm:w-1/3 md:w-1/4 mb-2 px-2">
