--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="index.html">Home</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
-        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="researchers.html">Resources</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3mlApp</a>
       </div>
     </div>
@@ -31,7 +31,7 @@
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
 <div class="flex-col text-justify mx-4 my-4 break-normal rounded">
-    <h1 class="shadow-md w-full text-white tracking-widest text-center h-10 bg-green-600 my-4 p-2">
+    <h1 class="shadow-md w-full text-white tracking-widest text-center bg-green-600 my-4 p-2">
 
 
         Aims and purpose of Three Minute Learning. How teachers and pupils can use our online App, 3ml.
