--- a/curriculum.html
+++ b/curriculum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>3ml Resources</title>
+  <title>Review Questions - Curriculum Topics</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="https://3ml.org.uk/app.css">
   <link rel="icon" type="image/png" href="https://3ml.org.uk//img/icon.png">
@@ -23,27 +23,25 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="index.html">Home</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
-        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="curriculum.html">Resources</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="researchers.html">Resources</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3mlApp</a>
       </div>
     </div>
   </div>
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
-<div class="w-2/3 mx-auto">
+<div>
     <h1 class="shadow-md w-full text-white tracking-widest text-center bg-green-600 my-4 p-2">
         On this page we provide links to pdf files of the review questions for anthologies.
     </h1>
-
-    <ul class="flex border-b">
-        <li class="-mb-px mr-1">
-          <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#">Curriculum</a>
-        </li>
+    <ul class="flex border-b">    
         <li class="mr-1">
-          <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#">Researchers</a>
+          <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="researchers.html">Researchers</a>
         </li>
-      </ul>
-      
+        <li class="-mb-px mr-1">
+          <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="curriculum.html">Curriculum</a>
+        </li>
+      </ul>      
     <div class="bg-white shadow-md rounded my-6">
         <h3 class="shadow-md w-full text-white tracking-widest text-left h-15 bg-tml-blue p-2 mb-6">
             Review questions - curriculum topics
