--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="index.html">Home</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
-        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="researchers.html">Resources</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3mlApp</a>
       </div>
     </div>
@@ -31,7 +31,7 @@
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
 <div class="flex flex-wrap">
-    <h1 class="shadow-md w-full text-white tracking-widest text-center h-25 bg-green-600 my-4 p-2">
+    <h1 class="shadow-md w-full text-white tracking-widest text-center bg-green-600 my-4 p-2">
 
         Three Minute Learning is a social enterprise set up to improve literacy and promote real science in schools.
     </h1>
